data/derived/sp14/progs/unify/prog1702.ml.out
Characters 298-299:
  addit / 10 :: a)
                ^
Error: This expression has type int * int list
       but an expression was expected of type int list
